# usv_simulation

./: README.md  empty_world.sdf  forces.html  forces.md  hello_world_plugin.sdf  project_model.py  source.bash  test_world.sdf  waves.sdf
feature_extracion_scripts/: compute_draft.py  force_torque_area.py  get_model_features.py  multithread.py  multithread_table_calc.py  project_model.py  torque.py  torque2.py  torque_dist.py  vereniki_info.py
launch/: launch_waves.py  waves_boat.py
models/: box.sdf  wind_model.sdf
models/boat/: model.config  model.sdf
models/boat/meshes/: bboat2.dae  bboat2_80.stl  boat.dae  boat.stl  boat3.dae  boat3.stl  boat_206.stl  boat_812.stl
models/box/: model.config  model.sdf
models/vereniki/: model.config  model.sdf
models/vereniki/meshes/: current_surface.txt  current_table.csv  vereniki_scaled.dae  vereniki_scaled.mtl  vereniki_scaled.stl  vereniki_scaled2.stl  wind_surface.txt  wind_table.csv
plugins/: AddedMass.cc  AddedMass.hh  CMakeLists.txt  ModelPush.cc  ModelPush.hh  ModelStatePublisher.cc  ModelStatePublisher.hh  WaterCurrent.cc  WaterCurrent.hh  Wind.cc  Wind.hh  utility.cc  utility.hh
plugins/model_push/: CMakeLists.txt  ModelPush.cc  ModelPush.hh
worlds/: empty_world.sdf  test_world.sdf  waves.sdf
